@@ -21,18 +21,10 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeType;
 import com.github.joschi.jadconfig.util.Duration;
 import com.google.common.base.Strings;
-import com.google.common.collect.Lists;
 import com.google.common.primitives.Ints;
+import jakarta.inject.Inject;
+import jakarta.inject.Named;
 import org.graylog.shaded.opensearch2.org.opensearch.OpenSearchException;
-import org.graylog.shaded.opensearch2.org.opensearch.action.admin.cluster.health.ClusterHealthRequest;
-import org.graylog.shaded.opensearch2.org.opensearch.action.admin.cluster.health.ClusterHealthResponse;
-import org.graylog.shaded.opensearch2.org.opensearch.action.admin.cluster.settings.ClusterGetSettingsRequest;
-import org.graylog.shaded.opensearch2.org.opensearch.action.admin.cluster.settings.ClusterGetSettingsResponse;
-import org.graylog.shaded.opensearch2.org.opensearch.client.Request;
-import org.graylog.shaded.opensearch2.org.opensearch.cluster.health.ClusterHealthStatus;
-import org.graylog.shaded.opensearch2.org.opensearch.common.unit.TimeValue;
-import org.graylog.storage.opensearch2.cat.CatApi;
-import org.graylog.storage.opensearch2.cat.IndexSummaryResponse;
 import org.graylog.storage.opensearch2.cat.NodeResponse;
 import org.graylog2.indexer.ElasticsearchException;
 import org.graylog2.indexer.cluster.ClusterAdapter;
@@ -48,53 +40,52 @@ import org.graylog2.system.stats.elasticsearch.IndicesStats;
 import org.graylog2.system.stats.elasticsearch.NodeInfo;
 import org.graylog2.system.stats.elasticsearch.NodesStats;
 import org.graylog2.system.stats.elasticsearch.ShardStats;
+import org.opensearch.client.Request;
+import org.opensearch.client.json.JsonData;
+import org.opensearch.client.opensearch.cat.aliases.AliasesRecord;
+import org.opensearch.client.opensearch.cat.indices.IndicesRecord;
+import org.opensearch.client.opensearch.cat.nodes.NodesRecord;
+import org.opensearch.client.opensearch.cluster.GetClusterSettingsResponse;
+import org.opensearch.client.opensearch.cluster.HealthResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import jakarta.inject.Inject;
-import jakarta.inject.Named;
-
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
 public class ClusterAdapterOS2 implements ClusterAdapter {
     private static final Logger LOG = LoggerFactory.getLogger(ClusterAdapterOS2.class);
     private final OpenSearchClient client;
     private final Duration requestTimeout;
-    private final CatApi catApi;
     private final PlainJsonApi jsonApi;
 
     @Inject
     public ClusterAdapterOS2(OpenSearchClient client,
                              @Named("elasticsearch_socket_timeout") Duration requestTimeout,
-                             CatApi catApi,
                              PlainJsonApi jsonApi) {
         this.client = client;
         this.requestTimeout = requestTimeout;
-        this.catApi = catApi;
         this.jsonApi = jsonApi;
     }
 
     @Override
     public Optional<HealthStatus> health() {
-        return clusterHealth().map(response -> healthStatusFrom(response.getStatus()));
+        return clusterHealth().map(response -> healthStatusFrom(response.status()));
     }
 
-    private HealthStatus healthStatusFrom(ClusterHealthStatus status) {
+    private HealthStatus healthStatusFrom(org.opensearch.client.opensearch._types.HealthStatus status) {
         switch (status) {
-            case RED:
+            case Red:
                 return HealthStatus.Red;
-            case YELLOW:
+            case Yellow:
                 return HealthStatus.Yellow;
-            case GREEN:
+            case Green:
                 return HealthStatus.Green;
         }
 
@@ -110,14 +101,24 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
     }
 
     private List<NodeResponse> nodes() {
-        final List<NodeResponse> allNodes = catApi.nodes();
-        final List<NodeResponse> nodesWithDiskStatistics = allNodes.stream().filter(NodeResponse::hasDiskStatistics).collect(Collectors.toList());
+        final var response = client.execute(c -> c.cat().nodes(builder -> builder.fullId(true)
+                .headers("id,name,role,host,ip,fileDescriptorMax,diskUsed,diskTotal,diskUsedPercent")));
+        final var allNodes = response.valueBody()
+                .stream()
+                .map(this::createNodeResponse)
+                .toList();
+        final var nodesWithDiskStatistics = allNodes.stream().filter(NodeResponse::hasDiskStatistics).toList();
         if (allNodes.size() != nodesWithDiskStatistics.size()) {
-            final List<NodeResponse> nodesWithMissingDiskStatistics = allNodes.stream().filter(nr -> !nr.hasDiskStatistics()).collect(Collectors.toList());
+            final List<NodeResponse> nodesWithMissingDiskStatistics = allNodes.stream().filter(nr -> !nr.hasDiskStatistics()).toList();
             LOG.info("_cat/nodes API has returned " + nodesWithMissingDiskStatistics.size() + " nodes without disk statistics:");
             nodesWithMissingDiskStatistics.forEach(node -> LOG.info(node.toString()));
         }
         return nodesWithDiskStatistics;
+    }
+
+    private NodeResponse createNodeResponse(NodesRecord node) {
+        return NodeResponse.create(node.id(), node.name(), node.nodeRole(), node.httpAddress(), node.ip(), node.diskUsed(),
+                node.diskTotal(), node.diskUsedPercent() == null ? null : Double.valueOf(node.diskUsedPercent()), node.fileDescMax() == null ? null : Long.valueOf(node.fileDescMax()));
     }
 
     @Override
@@ -130,50 +131,81 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
 
     @Override
     public ClusterAllocationDiskSettings clusterAllocationDiskSettings() {
-        final ClusterGetSettingsRequest request = new ClusterGetSettingsRequest();
-        request.includeDefaults(true);
-
-        final ClusterGetSettingsResponse response = client.execute((c, requestOptions) -> c.cluster().getSettings(request, requestOptions));
+        final var response = client.execute((c) -> c.cluster().getSettings(builder -> builder.includeDefaults(true)));
         return ClusterAllocationDiskSettingsFactory.create(
-                Boolean.parseBoolean(response.getSetting("cluster.routing.allocation.disk.threshold_enabled")),
-                response.getSetting("cluster.routing.allocation.disk.watermark.low"),
-                response.getSetting("cluster.routing.allocation.disk.watermark.high"),
-                response.getSetting("cluster.routing.allocation.disk.watermark.flood_stage")
+                Boolean.parseBoolean(getSetting(response, "cluster.routing.allocation.disk.threshold_enabled")),
+                getSetting(response, "cluster.routing.allocation.disk.watermark.low"),
+                getSetting(response, "cluster.routing.allocation.disk.watermark.high"),
+                getSetting(response, "cluster.routing.allocation.disk.watermark.flood_stage")
         );
     }
+
+    private String getSetting(GetClusterSettingsResponse response, String key) {
+        final var persistentSetting = getSetting(response.persistent(), key);
+        if (persistentSetting != null) {
+            return persistentSetting;
+        }
+        final var transientSetting = getSetting(response.transient_(), key);
+        if (transientSetting != null) {
+            return transientSetting;
+        }
+        return getSetting(response.defaults(), key);
+    }
+
+    private String getSetting(Map<String, JsonData> settings, String key) {
+        final var keyPath = Arrays.stream(key.split("\\.")).toList();
+        final var firstKey = keyPath.get(0);
+        if (firstKey == null || settings == null || settings.isEmpty() || !settings.containsKey(firstKey)) {
+            return null;
+        }
+
+        var current = settings.get(firstKey).toJson();
+
+        for (String curKey : keyPath.subList(1, keyPath.size() - 1)) {
+            current = current.asJsonObject().get(curKey);
+        }
+
+        final var lastKey = keyPath.get(keyPath.size() - 1);
+
+        return current.asJsonObject().getString(lastKey, null);
+    }
+
 
     @Override
     public Optional<String> nodeIdToName(String nodeId) {
         return nodeById(nodeId)
-                .map(jsonNode -> jsonNode.get("name").asText());
+                .map(Node::name);
     }
 
     @Override
     public Optional<String> nodeIdToHostName(String nodeId) {
         return nodeById(nodeId)
-                .map(jsonNode -> jsonNode.path("host"))
-                .filter(host -> !host.isMissingNode())
-                .map(JsonNode::asText);
+                .map(Node::host);
     }
 
-    private Optional<JsonNode> nodeById(String nodeId) {
+    record Node(String id, String name, String host) {}
+
+    private Optional<Node> nodeById(String nodeId) {
         if (Strings.isNullOrEmpty(nodeId)) {
             return Optional.empty();
         }
-        final Request request = new Request("GET", "/_nodes/" + nodeId);
-        return Optional.of(jsonApi.perform(request, "Unable to retrieve node information for node id " + nodeId))
-                .map(jsonNode -> jsonNode.path("nodes").path(nodeId))
-                .filter(node -> !node.isMissingNode());
+        final var request = new Request("GET", "/_nodes/" + nodeId);
+        final var response = jsonApi.perform(request, "Unable to retrieve node information for node id " + nodeId);
+
+        return Optional.ofNullable(response)
+                .map(r -> r.get("nodes"))
+                .filter(n -> !n.isMissingNode())
+                .map(n -> n.get(nodeId))
+                .filter(n -> !n.isMissingNode())
+                .map(n -> new Node(nodeId, n.get("name").asText(), n.get("host").asText()));
     }
 
     @Override
     public boolean isConnected() {
-        final ClusterHealthRequest request = new ClusterHealthRequest()
-                .timeout(new TimeValue(requestTimeout.getQuantity(), requestTimeout.getUnit()))
-                .local(true);
         try {
-            final ClusterHealthResponse result = client.execute((c, requestOptions) -> c.cluster().health(request, requestOptions));
-            return result.getNumberOfDataNodes() > 0;
+            final var result = client.execute((c) -> c.cluster().health(builder -> builder.local(true)
+                    .timeout(timeBuilder -> timeBuilder.time(durationToString(requestTimeout)))));
+            return result.numberOfDataNodes() > 0;
         } catch (OpenSearchException e) {
             LOG.error("Check for connectivity failed with exception '{}' - enable debug level for this class to see the stack trace.", e.getMessage());
             if (LOG.isDebugEnabled()) {
@@ -183,9 +215,13 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
         }
     }
 
+    private String durationToString(Duration requestTimeout) {
+        return Ints.saturatedCast(requestTimeout.toSeconds()) + "s";
+    }
+
     @Override
     public Optional<String> clusterName() {
-        return clusterHealth().map(ClusterHealthResponse::getClusterName);
+        return clusterHealth().map(HealthResponse::clusterName);
     }
 
     @Override
@@ -194,33 +230,26 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
                 .map(this::clusterHealthFrom);
     }
 
-    private ClusterHealth clusterHealthFrom(ClusterHealthResponse response) {
-        return ClusterHealth.create(response.getStatus().toString().toLowerCase(Locale.ENGLISH),
+    private ClusterHealth clusterHealthFrom(HealthResponse response) {
+        return ClusterHealth.create(response.status().toString().toLowerCase(Locale.ENGLISH),
                 ClusterHealth.ShardStatus.create(
-                        response.getActiveShards(),
-                        response.getInitializingShards(),
-                        response.getRelocatingShards(),
-                        response.getUnassignedShards()
+                        response.activeShards(),
+                        response.initializingShards(),
+                        response.relocatingShards(),
+                        response.unassignedShards()
                 )
         );
     }
 
     @Override
     public PendingTasksStats pendingTasks() {
-        final Request request = new Request("GET", "/_cluster/pending_tasks");
+        final var response = client.execute(c -> c.cluster().pendingTasks(), "Couldn't read pending cluster tasks");
 
-        final JsonNode response = jsonApi.perform(request, "Couldn't read Elasticsearch pending cluster tasks");
+        final var pendingTasksTimeInQueue = response.tasks().stream()
+                .map(task -> Long.valueOf(task.timeInQueueMillis()))
+                .toList();
 
-        final JsonNode pendingClusterTasks = response.path("tasks");
-        final int pendingTasksSize = pendingClusterTasks.size();
-        final List<Long> pendingTasksTimeInQueue = Lists.newArrayListWithCapacity(pendingTasksSize);
-        for (JsonNode jsonElement : pendingClusterTasks) {
-            if (jsonElement.has("time_in_queue_millis")) {
-                pendingTasksTimeInQueue.add(jsonElement.get("time_in_queue_millis").asLong());
-            }
-        }
-
-        return PendingTasksStats.create(pendingTasksSize, pendingTasksTimeInQueue);
+        return PendingTasksStats.create(response.tasks().size(), pendingTasksTimeInQueue);
     }
 
     @Override
@@ -267,47 +296,39 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
 
     @Override
     public Map<String, NodeInfo> nodesInfo() {
-        final Request request = new Request("GET", "/_nodes");
-        final JsonNode nodesJson = jsonApi.perform(request, "Couldn't read Opensearch nodes data!");
-
-        return toStream(nodesJson.at("/nodes").fields())
-                .collect(Collectors.toMap(Map.Entry::getKey, o -> createNodeInfo(o.getValue())));
+        final var response = client.execute(c -> c.nodes().info(), "Could not read nodes list from indexer!");
+        return response.nodes().entrySet()
+                .stream().collect(Collectors.toMap(Map.Entry::getKey, entry -> createNodeInfo(entry.getValue())));
     }
 
-    private NodeInfo createNodeInfo(JsonNode nodesJson) {
+    private NodeInfo createNodeInfo(org.opensearch.client.opensearch.nodes.info.NodeInfo nodeInfo) {
         return NodeInfo.builder()
-                .version(nodesJson.at("/version").asText())
-                .os(nodesJson.at("/os"))
-                .roles(toStream(nodesJson.at("/roles").elements()).map(JsonNode::asText).toList())
-                .jvmMemHeapMaxInBytes(nodesJson.at("/jvm/mem/heap_max_in_bytes").asLong())
+                .version(nodeInfo.version())
+                .os(nodeInfo.os())
+                .roles(nodeInfo.roles().stream().map(Enum::toString).toList())
+                .jvmMemHeapMaxInBytes(nodeInfo.jvm().mem().heapMaxInBytes())
                 .build();
-    }
-
-    public <T> Stream<T> toStream(Iterator<T> iterator) {
-        return StreamSupport.stream(((Iterable<T>) () -> iterator).spliterator(), false);
     }
 
     @Override
     public ShardStats shardStats() {
         return clusterHealth()
                 .map(response -> ShardStats.create(
-                        response.getNumberOfNodes(),
-                        response.getNumberOfDataNodes(),
-                        response.getActiveShards(),
-                        response.getRelocatingShards(),
-                        response.getActivePrimaryShards(),
-                        response.getInitializingShards(),
-                        response.getUnassignedShards(),
-                        response.isTimedOut()
+                        response.numberOfNodes(),
+                        response.numberOfDataNodes(),
+                        response.activeShards(),
+                        response.relocatingShards(),
+                        response.activePrimaryShards(),
+                        response.initializingShards(),
+                        response.unassignedShards(),
+                        response.timedOut()
                 ))
                 .orElseThrow(() -> new ElasticsearchException("Unable to retrieve shard stats."));
     }
 
-    private Optional<ClusterHealthResponse> clusterHealth() {
+    private Optional<HealthResponse> clusterHealth() {
         try {
-            final ClusterHealthRequest request = new ClusterHealthRequest()
-                    .timeout(TimeValue.timeValueSeconds(Ints.saturatedCast(requestTimeout.toSeconds())));
-            return Optional.of(client.execute((c, requestOptions) -> c.cluster().health(request, requestOptions)));
+            return Optional.of(client.execute((c) -> c.cluster().health(builder -> builder.timeout(timeBuilder -> timeBuilder.time(durationToString(requestTimeout))))));
         } catch (OpenSearchException e) {
             if (LOG.isDebugEnabled()) {
                 LOG.error("{} ({})", e.getMessage(), Optional.ofNullable(e.getCause()).map(Throwable::getMessage).orElse("n/a"), e);
@@ -324,13 +345,17 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
             return Optional.of(HealthStatus.Green);
         }
 
-        final Map<String, String> aliasMapping = catApi.aliases();
+        final var aliasMapping = client.execute(c -> c.cat().aliases(builder -> builder.headers("alias,index")))
+                .valueBody()
+                .stream()
+                .collect(Collectors.toMap(AliasesRecord::alias, AliasesRecord::index));
         final Set<String> mappedIndices = indices
                 .stream()
                 .map(index -> aliasMapping.getOrDefault(index, index))
                 .collect(Collectors.toSet());
 
-        final Set<IndexSummaryResponse> indexSummaries = catApi.indices()
+        final var indexSummaries = client.execute(c -> c.cat().indices(builder -> builder.headers("index,status,health")))
+                .valueBody()
                 .stream()
                 .filter(indexSummary -> mappedIndices.contains(indexSummary.index()))
                 .collect(Collectors.toSet());
@@ -340,7 +365,7 @@ public class ClusterAdapterOS2 implements ClusterAdapter {
         }
 
         return indexSummaries.stream()
-                .map(IndexSummaryResponse::health)
+                .map(IndicesRecord::health)
                 .map(HealthStatus::fromString)
                 .min(HealthStatus::compareTo);
     }
